Fixed group map not showing up

--- a/src/components/GroupMap/style.css
+++ b/src/components/GroupMap/style.css
@@ -1,10 +1,12 @@
 #map-wrapper {
 	position: relative;
+	width: 100%;
+	height: 100vh
 }
 
 #map {
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 }
 
 #map-progress {
